# onyx-send2boox

./: .gitignore  README.md  boox.py  pyproject.toml  requirements-dev.txt
boox/: __init__.py  _http.py  _version.py  auth.py  cli.py  client.py  errors.py  files.py  pushread.py  screensavers.py  subscriptions.py
boox/sync/: __init__.py  _protocol.py  binary.py  calibre_bridge.py  calibre_md5_populator.py  notes.py  reader.py  store.py
docs/: endpoint-inventory.md
scripts/: populate_calibre_md5_identifiers.py  sync_reader_to_calibre.py
tests/: README.md  conftest.py  test_auth.py  test_auth_endpoints.py  test_calibre_bridge.py  test_calibre_md5_populator.py  test_delete.py  test_errors.py  test_file_listing.py  test_file_push.py  test_files.py  test_live_auth.py  test_live_pushread.py  test_live_screensavers.py  test_live_smoke.py  test_live_subscriptions.py  test_live_sync_token.py  test_mock_http_fixture.py  test_oss_key_format.py  test_pushread.py  test_screensavers.py  test_smoke.py  test_subscriptions.py  test_sync.py  test_sync_binary.py  test_sync_notes.py  test_sync_reader.py  test_sync_store.py
